# engine

./: BUILD.gn  DEPS  README.md
lib/snapshot/: BUILD.gn
lib/ui/: hooks.dart
runtime/: dart_isolate.cc  dart_snapshot.cc  runtime_controller.cc
shell/common/: BUILD.gn  engine.cc  shell.cc  shorebird.cc  switches.cc
shell/common/shorebird/: BUILD.gn  blobs_handle.cc  blobs_handle.h  blobs_handle_unittests.cc  shorebird.cc  shorebird.h  snapshots_data_handle.cc  snapshots_data_handle.h
shell/platform/android/: BUILD.gn  android_exports.lst  flutter_main.cc  flutter_main.h
shell/platform/android/io/flutter/embedding/engine/: FlutterJNI.java
shell/platform/darwin/ios/: BUILD.gn
shell/platform/darwin/ios/framework/Source/: FlutterDartProject.mm  FlutterViewController.mm
shell/platform/darwin/macos/: BUILD.gn
shell/platform/darwin/macos/framework/Source/: FlutterDartProject.mm
shell/testing/: BUILD.gn  tester_main.cc
sky/tools/: create_full_ios_framework.py
testing/: run_tests.py
testing/scenario_app/ios/Scenarios/ScenariosUITests/: PlatformViewUITests.m
